--- a/index.html
+++ b/index.html
@@ -52,69 +52,69 @@ Metódica y organizada, con experiencia en <span id="amarillo">manejo de equipos
 					<div class="col-xs-4 col-md-4">
 						<div class="progress">
 							<div class="progress-bar progress-bar-danger"  id="barra" role="progressbar"
-								aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"
-								style="width: 80%">
-									<span>JD Edwards</span>
-							</div>
-						</div>
-												<div class="progress">
-							<div class="progress-bar progress-bar-danger"  id="barra" role="progressbar"
-								aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"
-								style="width: 80%">
-									<span>JD Edwards</span>
-							</div>
-						</div>
-						<div class="progress">
-							<div class="progress-bar progress-bar-danger"  id="barra" role="progressbar"
-								aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"
-								style="width: 80%">
-									<span>JD Edwards</span>
-							</div>
-						</div>
-					</div>
-					<div class="col-xs-4 col-md-4">
-					<div class="progress">
-							<div class="progress-bar progress-bar-danger"  id="barra" role="progressbar"
-								aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"
-								style="width: 80%">
-									<span>JD Edwards</span>
-							</div>
-						</div>
-												<div class="progress">
-							<div class="progress-bar progress-bar-danger"  id="barra" role="progressbar"
-								aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"
-								style="width: 80%">
-									<span>JD Edwards</span>
-							</div>
-						</div>
-												<div class="progress">
-							<div class="progress-bar progress-bar-danger"  id="barra" role="progressbar"
-								aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"
-								style="width: 80%">
-									<span>JD Edwards</span>
-							</div>
-						</div>
-					</div>
-					<div class="col-xs-4 col-md-4">
-					<div class="progress">
-							<div class="progress-bar progress-bar-danger"  id="barra" role="progressbar"
-								aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"
-								style="width: 80%">
-									<span>JD Edwards</span>
-							</div>
-					</div>
-											<div class="progress">
-							<div class="progress-bar progress-bar-danger"  id="barra" role="progressbar"
-								aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"
-								style="width: 80%">
-									<span>JD Edwards</span>
+								aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"
+								style="width: 85%">
+									<span>Toolkit – JDE</span>
 							</div>
 						</div>
 							<div class="progress">
 							<div class="progress-bar progress-bar-danger"  id="barra" role="progressbar"
-								aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"
-								style="width: 80%">
-									<span>JD Edwards</span>
+								aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"
+								style="width: 75%">
+									<span>Business Services</span>
+							</div>
+						</div>
+						<div class="progress">
+							<div class="progress-bar progress-bar-danger"  id="barra" role="progressbar"
+								aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"
+								style="width: 50%">
+									<span>Java</span>
+							</div>
+						</div>
+					</div>
+					<div class="col-xs-4 col-md-4">
+					<div class="progress">
+							<div class="progress-bar progress-bar-danger"  id="barra" role="progressbar"
+								aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"
+								style="width: 75%">
+									<span>SQL </span>
+							</div>
+						</div>
+												<div class="progress">
+							<div class="progress-bar progress-bar-danger"  id="barra" role="progressbar"
+								aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"
+								style="width: 50%">
+									<span>Metodologías de desarrollo de software</span>
+							</div>
+						</div>
+												<div class="progress">
+							<div class="progress-bar progress-bar-danger"  id="barra" role="progressbar"
+								aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"
+								style="width: 70%">
+									<span>HTML</span>
+							</div>
+						</div>
+					</div>
+					<div class="col-xs-4 col-md-4">
+					<div class="progress">
+							<div class="progress-bar progress-bar-danger"  id="barra" role="progressbar"
+								aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
+								style="width: 60%">
+									<span>CSS</span>
+							</div>
+					</div>
+											<div class="progress">
+							<div class="progress-bar progress-bar-danger"  id="barra" role="progressbar"
+								aria-valuenow="35" aria-valuemin="0" aria-valuemax="100"
+								style="width: 35%">
+									<span>ASP.net</span>
+							</div>
+						</div>
+							<div class="progress">
+							<div class="progress-bar progress-bar-danger"  id="barra" role="progressbar"
+								aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"
+								style="width: 45%">
+									<span>C#</span>
 							</div>
 						</div>
 					</div>
@@ -123,9 +123,12 @@ Metódica y organizada, con experiencia en <span id="amarillo">manejo de equipos
 					<div class="row" id="color">
 					<div class="col-xs-6 col-md-6 ">
 						<h1 id="titulocv">Trabajo</h1>
-						Grupo ASSA <small>2013 - Presente</small>
+						Grupo ASSA - Consultor Técnico Senior JD Edwards <small>2013 - Presente</small>
 						<p> Toolkit Developer / Business Services Developer / QA - Product and Process Quality Assurance</p>
 						<br>
+						Cabal CL – Operador Telefónico  <small>2009 - 2013</small>
+						<p> Atención al Cliente de Tarjetas de Crédito y Débito - Comercios / Gestión de reclamos. </p>
+						<br>						
 						<h1 id="titulocv">Idioma</h1>
 						Ingles <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star-o"></i>
 					</div>
